完成公共头部以及css样式划分

--- a/src/pages/common/header.html
+++ b/src/pages/common/header.html
@@ -1,4 +1,8 @@
  <!-- header start -->
+
+ <!-- 这个header页面不会单独执行 只适用于把此标签加入别的页面 
+ 因此不需要引入header.css样式 其他页面样式导入header样式即可 -->
+
  <header class="comm-header">
     <div class="comm-top-wrap bg-green">
         <div class="container">
